--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
         "class-validator": "^0.13.2",
         "clsx": "^1.1.1",
         "commander": "^9.1.0",
+        "cookie-parser": "1.4.6",
+        "csurf": "1.11.0",
         "date-fns": "^2.28.0",
         "escape-html": "^1.0.3",
         "fast-levenshtein": "^3.0.0",
@@ -96,6 +98,8 @@
         "@nrwl/tao": "13.4.2",
         "@nrwl/workspace": "13.4.2",
         "@nx-plus/docusaurus": "^13.0.0",
+        "@types/cookie-parser": "^1.4.3",
+        "@types/csurf": "^1.11.2",
         "@types/escape-html": "^1.0.1",
         "@types/express": "^4.17.13",
         "@types/fast-levenshtein": "^0.0.2",
